# ai-cli-toolkit

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml  pypi.yml
.github/workflows/: ci.yml  pypi.yml
ai_cli/: __init__.py  __main__.py  ca.py  canary_capture.py  codex_personality_menu.py  completion_gen.py  config.py  credentials.py  detached_cleanup.py  housekeeping.py  instructions.py  log.py  main.py  main_helpers.py  prompt_editor_launcher.py  proxy.py  remote.py  remote_package.py  session.py  session_store.py  system_prompts.py  traffic.py  traffic_db.py  tui.py  update.py
completions/: _ai-cli  ai-cli.bash
docs/: cli-reference.md  codex-instructions-layers.md  config-reference.md  getting-started.md  index.md  operations-runbook.md  privacy-data-handling.md
mux/: Cargo.toml
statusline/: statusline-command.sh
templates/: base_instructions.txt
tests/: test_claude_addon.py  test_cleanup.py  test_codex_addon_websocket.py  test_codex_instruction_modes.py  test_codex_personality_menu.py  test_completion_gen.py  test_config.py  test_gemini_addon.py  test_install_script.py  test_instructions.py  test_main_helpers_mux.py  test_main_prompt_overrides.py  test_main_proxy_failure.py  test_main_remote_sync.py  test_prompt_editor_launcher.py  test_proxy.py  test_remote.py  test_remote_package.py  test_session_gemini_parser.py  test_session_remote_context.py  test_system_prompts.py  test_tools.py  test_traffic_log_addon.py  test_update.py
(+17 files in other folders)
