[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.2.0"
description = "Unified AI CLI wrapper for Claude, Codex, Copilot, and Gemini"
requires-python = ">=3.8"
dependencies = [
    "mitmproxy>=10,<12",
    "shtab>=1.7,<2",
    "bcrypt<4.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6.9",
]

[project.scripts]
ai-cli = "ai_cli.main:main_cli"

[tool.setuptools]
packages = ["ai_cli"]
include-package-data = true

[tool.setuptools.package-data]
ai_cli = ["bin/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers --cov=ai_cli --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["ai_cli"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py38"
line-length = 100
src = ["ai_cli", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai_cli"]

[tool.mypy]
python_version = "3.9"
files = ["ai_cli", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["ai_cli.tools", "ai_cli.addons.*"]
ignore_errors = true
